--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+body {
+    font-family: helvetica;
+    font-weight: 100;
+}
+
+.d3-tip {
+    font-size: 12px;
+}
+
 path {
     fill: none;
     stroke: #666;
